# quantaid-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ai_test.py  app.py  config.py  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  question.txt  render.yaml  requirements.txt  scemas.py
.github/workflows/: ci.yml
data/: default_dashboard_config.py
database/: mongo.py  redis_client.py  seeding.py
models/: user.py
routes/: __init__.py  admin_users.py  ai.py  auth.py  content.py  feedback.py  progress.py  rice_auth.py  users.py
scripts/: migrate_lessons_to_db.py
services/: auth_service.py  email_service.py
tests/: conftest.py  test_auth_routes.py  test_auth_service.py  test_user_routes.py
