[project]
name = "quantumaiedbackend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.0",
    "argon2-cffi>=23.1.0",
    "flask>=2.2.2",
    "flask-cors>=3.0.10",
    "flask-limiter>=3.5.0",
    "flask-login>=0.6.3",
    "flask-session>=0.8.0",
    "gunicorn>=21.2.0",
    "openai>=2.30.0",
    "passlib[argon2]>=1.7.4",
    "pymongo[srv]>=4.1.1",
    "python-dotenv>=0.20.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "resend>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.26",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"routes/content.py" = ["E501"]  # long description strings in course data

[tool.ty.environment]
python-version = "3.11"
